# pipeline-event-driven-gdacs

./: .gitignore  Makefile  README.md  pyproject.toml
src/data-retrieval/database-reader/: database.py
src/data_retrieval/: retriever.py
src/data_retrieval/display/: display.py
src/data_retrieval/fetcher/: rss_fetcher.py
src/data_retrieval/reader/: gdacs_reader.py
src/pipeline_trigger/: check_status.py  monitor.py  process_entries.py
src/pipeline_trigger/activate/: activate_dag.py
src/pipeline_trigger/info_retrieval/: data_retrieval.py
src/pipeline_trigger/processor/: process_entries.py
src/pipeline_trigger/static_data/: countries_iso.py  excluded_countries.py
src/pipeline_trigger/trigger/: trigger_dag.py
util/: data_exploration.py  util.py
util/db/: create_database.py
util/notebooks/: data_exploration.ipynb
