[tool.poetry]
name = "template-poetry"
version = "0.1.0"
description = "This project serves as a template for initialising new Python projects with Poetry, including basic configuration for dependency management and virtual environment setup. It is designed to be cloned for quick setup of new repositories on GitHub."
authors = ["ediakatos <ediakatos@mapaction.org>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "0.7.0"
asttokens = "2.4.1"
beautifulsoup4 = "4.12.3"
cachetools = "5.3.3"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
comm = "0.2.2"
contourpy = "1.2.1"
cycler = "0.12.1"
debugpy = "1.8.2"
decorator = "5.1.1"
exceptiongroup = "1.2.1"
executing = "2.0.1"
feedparser = "6.0.11"
fonttools = "4.53.0"
gdacs-api = "2.0.0"
idna = "3.7"
ipykernel = "6.29.5"
ipython = "8.26.0"
jedi = "0.19.1"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
kiwisolver = "1.4.5"
matplotlib = "3.9.0"
matplotlib-inline = "0.1.7"
nest-asyncio = "1.6.0"
numpy = "2.0.0"
packaging = "24.1"
pandas = "2.2.2"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "10.4.0"
platformdirs = "4.2.2"
prompt-toolkit = "3.0.47"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pydantic = "2.8.0"
pydantic-core = "2.20.0"
pygments = "2.18.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
pyzmq = "26.0.3"
requests = "2.32.3"
sgmllib3k = "1.0.0"
six = "1.16.0"
soupsieve = "2.5"
stack-data = "0.6.3"
tornado = "6.4.1"
traitlets = "5.14.3"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
wcwidth = "0.2.13"
xmltodict = "0.13.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pymarkdownlnt = "^0.9.18"
isort = "^5.13.2"
pytest = "^8.2.2"
tabulate = "^0.9.0"
nbqa = "^1.8.5"
black = "^24.4.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
